# concord-bench

./: .gitignore  CLAUDE.md  LICENSE  concord_ceo_plan.md  concord_eng_plan.md  concord_spec.md  concord_tasks.md  pyproject.toml  test_plan.md
scripts/: pre_phase3_report.py  select_smoke_test_seeds.py  smoke_test_report.py
src/concord/: cli.py  exceptions.py
src/concord/agents/: base.py  closed_api_adapter.py  open_weight_adapter.py  retry.py
src/concord/analysis/: aggregate.py  bootstrap_ci.py  model_card.py  plots.py
src/concord/baselines/: deceptive_agent.py  galaxy_brain_seller.py  greedy_agent.py  honest_winwin_agent.py  random_agent.py  time_pressured_agent.py
src/concord/data/: loader.py
src/concord/env/: core.py  offer_parser.py  pettingzoo_wrapper.py  state.py
src/concord/graders/: calibration.py  constraints.py  privacy.py  social.py  truthfulness.py  utility.py
src/concord/runners/: budget.py  cache.py  run_batch.py  run_episode.py
src/concord/schemas/: culture.py  episode.py  offer.py  scenario.py
src/concord/synth/: __init__.py  audit.py  awm_prompts.py  (+3 more)
tests/: conftest.py
tests/integration/: test_awm_pipeline.py  test_closed_api.py  test_episode_e2e.py  test_hf_loader.py  test_open_weight_e2e.py  test_pettingzoo_compat.py
tests/regression/: test_scenario_schema_compat.py
tests/unit/: test_agents_retry.py  test_aggregate.py  test_baselines.py  test_budget.py  test_cache.py  test_cultural_adapter.py  test_enrichment.py  test_env_core.py  test_graders_calibration.py  test_graders_constraints.py  test_graders_privacy.py  test_graders_social.py  test_graders_truthfulness.py  test_graders_utility.py  test_loader.py  test_offer_parser.py  test_open_weight_adapter.py  test_repeated_game.py  test_schemas.py
(+295 files in other folders)
